--- a/style.css
+++ b/style.css
@@ -51,20 +51,20 @@ a {
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-
 }
 
 .lista-miniatur {
   flex: 0 1 auto;
   list-style: none;
+  display: flex;
   padding: 0;
   white-space: nowrap;
   overflow-x: auto;
+  justify-content: space-around;
 }
 .obraz-miniatury {
   display: block;
   width: 100%;
-  height: 80px;
 }
 .element-listy {
   display: inline-block;
@@ -77,7 +77,8 @@ a {
   -o-border-radius: 5px;
   margin: 10px;
   background-color: #38a3a5;
-  width: 120px;
+  min-width: 120px;
+  max-width: 120px;
 }
 .container-large-image {
   flex: 1 1 auto;
