--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .logo-icon {
   width: 100px;
   position: absolute;
-  top: auto;
+  top: 20px;
 }
 
 .ornament-title {
@@ -40,6 +40,7 @@ body {
   font-size: 18px;
   font-weight: 500;
 }
+
 a {
   text-decoration: none;
 }
@@ -57,6 +58,7 @@ a {
   flex: 0 1 auto;
   list-style: none;
   display: flex;
+  align-items: baseline;
   padding: 0;
   white-space: nowrap;
   overflow-x: auto;
@@ -65,6 +67,7 @@ a {
 .obraz-miniatury {
   display: block;
   width: 100%;
+  height: 85px;
 }
 .element-listy {
   display: inline-block;
@@ -75,13 +78,15 @@ a {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  margin: 10px;
   background-color: #38a3a5;
   min-width: 120px;
   max-width: 120px;
 }
 .container-large-image {
   flex: 1 1 auto;
+}
+.border-large-image {
+  text-align: center;
 }
 
 .large-image {
