--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ a {
 
 .main_title {
   flex: 0 1 auto;
+  position: relative;
+ 
+
 }
 .main-text {
   flex: 1 1 auto;
@@ -84,7 +87,6 @@ a {
 }
 .container-large-image {
   flex: 1 1 auto;
-  
 }
 .border-large-image {
   text-align: center;
@@ -92,18 +94,36 @@ a {
 
 .large-image {
   width: 100%;
-
-  
 }
-.title-large-image{
+.title-large-image {
   display: flex;
   justify-content: center;
   align-items: center;
- position: absolute;
- top:330px;
- left: 100px;
+  position: absolute;
+  top: 330px;
+  left: 100px;
   font-size: 10em;
   text-align: center;
-  font-family: 'Lobster', cursive;
-  color:white;
+  font-family: "Lobster", cursive;
+  color: white;
+}
+@media all and (min-width:320px) {
+  .logo {
+    background: #38a3a5;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 25px;
+    color: azure;
+    font-weight: 100;
+  }
+  .logo-icon {
+    width: 60px;
+    position: absolute;
+    top: 20px;
+  }
+  .obraz-miniatury {
+    display: block;
+    width: 100%;
+    height: 85px;
+  }
 }
