--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html,
 body {
-  height: 100%;
   font-size: 10px;
   background: #57cc99;
   font-family: "Roboto", sans-serif;
@@ -8,35 +7,51 @@ body {
 .HollyGrail {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+
+  background-color: violet;
+
   min-height: 100vh;
+}
+.HollyGrail-title {
+  padding-top: 30px;
 }
 .HolyGrail-body {
   display: flex;
   flex: 1;
 }
 .HolyGrail-content {
-  flex: 1;
+  background-color: violet;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.HollyGrail-content-txt {
+  font-size: 16px;
+}
+
 .HolyGrail-nav,
 .HolyGrail-ads {
   /* 12em is the width of the columns */
-  flex: 0 0 12em;
-  align-self: center;
-  justify-content: center;
+  flex: 1 0 16em;
 }
 
 .HolyGrail-ads {
   background-color: aliceblue;
   display: flex;
-  flex: 1 1 2;
+  flex: 1;
 }
 
 .text-aside {
   font-size: 16px;
+  text-align: center;
 }
+
 .HolyGrail-nav {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+
   /* put the nav on the left */
   order: -1;
 }
@@ -60,6 +75,10 @@ body {
 
 .ornament-title {
   font-weight: 900;
+}
+.lista-miniatur {
+  /* flex: 0 1 auto; */
+  list-style: none;
 }
 
 .tytuly-miniatury {
@@ -105,16 +124,19 @@ a {
 .large-image {
   width: 90%;
   border: 2px solid white;
-  border-radius: 5px;
-  margin: 25px;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 .title-large-image {
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 230px;
-  left: 200px;
+  top: 140px;
+  left: 530px;
   font-size: 10em;
   text-align: center;
   font-family: "Lobster", cursive;
@@ -122,10 +144,11 @@ a {
 }
 
 footer {
-  background-color: antiquewhite;
-  height: 10px;
+  background-color: coral;
+  height: 100px;
 }
-@media (max-width: 575.98px) {
+
+/* @media (max-width: 575.98px) {
   .logo {
     background: #38a3a5;
     text-align: center;
@@ -169,4 +192,4 @@ footer {
   .border-acapit {
     color: aliceblue;
   }
-}
+} */
