--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 .HollyGrail {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-self: baseline;
 
   background-color: violet;
 
@@ -24,21 +25,31 @@ body {
   background-color: violet;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  margin-left: 10px;
 }
 
 .HollyGrail-content-txt {
   font-size: 16px;
 }
 
+.HollyGrail nav {
+  position: relative;
+  top:20px;
+}
+
 .HolyGrail-nav,
 .HolyGrail-ads {
   /* 12em is the width of the columns */
-  flex: 1 0 16em;
+  flex: 2 0 6em;
 }
 
 .HolyGrail-ads {
-  background-color: aliceblue;
+  background-color: violet;
+  position: relative;
+  right:30px;
+  padding: 20px;
   display: flex;
   flex: 1;
 }
@@ -46,6 +57,7 @@ body {
 .text-aside {
   font-size: 16px;
   text-align: center;
+  text-align: left;
 }
 
 .HolyGrail-nav {
@@ -135,7 +147,7 @@ a {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 140px;
+  top: 160px;
   left: 530px;
   font-size: 10em;
   text-align: center;
