--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-size: 10px;
-  background: #57cc99;
+  background: rgb(58, 223, 168);
   font-family: "Roboto", sans-serif;
 }
 .HollyGrail {
@@ -25,7 +25,7 @@ body {
   align-items: center;
   margin-left: 10px;
   position: relative;
-  top:30px;
+  top: 30px;
 }
 
 .HollyGrail-content-text {
@@ -46,7 +46,7 @@ body {
 }
 
 .HolyGrail-ads {
-  color:white;
+  color: white;
   position: relative;
   right: 30px;
   padding: 20px;
@@ -184,51 +184,75 @@ footer {
 footer p {
   font-size: 12px;
   text-align: center;
-  color:white;
+  color: white;
 }
 
-/* @media (max-width: 575.98px) {
+@media (max-width: 575.98px) {
+  .HollyGrail {
+    background-color: rgb(58, 223, 168);
+    display: flex;
+    flex-direction: column;
+  }
   .logo {
-    background: #38a3a5;
     text-align: center;
     text-transform: uppercase;
-    font-size: 35px;
+    font-size: 20px;
     color: azure;
-    font-weight: 100;
+    font-weight: 200;
   }
   .logo-icon {
-    width: 60px;
+    width: 70px;
     position: absolute;
-    top: 20px;
+    top: 25px;
   }
-  .obraz-miniatury {
-    display: block;
-    width: 100%;
-    height: 85px;
+  .HolyGrail-content {
+    position: absolute;
+    top: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+  }
+  .HollyGrail nav {
+    position: relative;
+    top: 200px;
+    right: 20px;
+    display: flex;
+    background-color: rgb(58, 223, 168);
+  }
+  .lista-miniatur ul {
+    /* flex: 0 1 auto; */
+    list-style: none;
+    padding: 0px;
+  }
+  .HolyGrail-ads {
+    color: white;
+    position: relative;
+    top: 180px;
+    right: 30px;
+    padding: 20px;
+    display: flex;
+    flex: 1;
   }
   .title-large-image {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 280px;
-    right: 250px;
-    font-size: 4em;
-    text-align: left;
+    top: 20px;
+    left: 30px;
+    font-size: 2em;
+    text-align: center;
     font-family: "Lobster", cursive;
     color: white;
   }
-  .lista-miniatur {
-    flex: 0 1 auto;
-    list-style: none;
+  footer {
+    position: relative;
+    top: 200px;
+    background-color: #38a3a5;
+    height: 100px;
     display: flex;
-    align-items: baseline;
-    padding: 15px;
-    white-space: nowrap;
-    overflow-x: auto;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
   }
-  .border-acapit {
-    color: aliceblue;
-  }
-} */
+}
