--- a/style.css
+++ b/style.css
@@ -1,72 +1,69 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 html,
 body {
+
   font-size: 10px;
-  background: rgb(58, 223, 168);
   font-family: "Roboto", sans-serif;
+  
 }
 .HollyGrail {
+  background-color: rgb(59, 211, 160);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-self: baseline;
+  justify-content: center;
+  justify-content: space-evenly;
+}
 
-  min-height: 100vh;
-}
 .HollyGrail-title {
-  padding-top: 30px;
+  padding-top: 20px;
 }
+
+.logo {
+  background: #38a3a5;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 35px;
+  color: azure;
+  font-weight: 200;
+}
+
+.ornament-title {
+  font-weight: 900;
+}
+
 .HolyGrail-body {
   display: flex;
-  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+/*main content*/
 .HolyGrail-content {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 10px;
+
   position: relative;
   top: 30px;
 }
 
-.HollyGrail-content-text {
-  height: 10px;
-  font-size: 16px;
-  background-color: blue;
-}
-
-.HollyGrail nav {
-  position: relative;
-  top: 20px;
-}
-
-.HolyGrail-nav,
-.HolyGrail-ads {
-  /* 12em is the width of the columns */
-  flex: 1 0 10em;
-}
-
-.HolyGrail-ads {
-  color: white;
-  position: relative;
-  right: 30px;
-  padding: 20px;
-  display: flex;
-  flex: 1;
-}
-
-.text-aside {
-  font-size: 16px;
-  text-align: center;
-  text-align: left;
-}
-
-.HolyGrail-nav {
-  display: flex;
-  flex-direction: column;
-
-  /* put the nav on the left */
+.HollyGrail-nav {
   order: -1;
+
 }
+
+.HolyGrail-ads {
+  display: block;
+  position: relative;
+  top: 40px;
+  font-size: 12px;
+  color: white;
+  width: 60%;
+}
+
 #wydrabartek {
   font-size: large;
 }
@@ -134,13 +131,14 @@ a {
 }
 
 .large-image {
-  width: 90%;
+  width: 100vw;
   border: 2px solid white;
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
+
 }
 .title-large-image {
   display: flex;
@@ -166,12 +164,14 @@ a {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border: 2px solid white;
+  margin-top: 2.5px;
 }
 
 .plus-btn {
   font-size: 48px;
   color: aliceblue;
 }
+
 
 footer {
   background-color: #38a3a5;
@@ -187,90 +187,83 @@ footer p {
   color: white;
 }
 
-@media (max-width: 575.98px) {
-  .HollyGrail {
-    background-color: rgb(58, 223, 168);
-    display: flex;
-    flex-direction: column;
+@media (min-width: 320px) { 
+
+.HollyGrail{
+    background-color: rgb(223, 223, 223);
   }
-  .logo {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 20px;
-    color: azure;
-    font-weight: 200;
+  .HollyGrail-title {
+    position: relative;
+
+
   }
-  .logo-icon {
-    width: 70px;
-    position: absolute;
-    top: 25px;
-  }
-  .HolyGrail-content {
-    position: absolute;
-    top: 110px;
+  .HolyGrail-nav{
+    position: relative;
+    left:38px;
     display: flex;
     justify-content: center;
     align-items: center;
-    align-items: center;
+    align-self: center;
+    
+    
   }
   .HollyGrail nav {
-    position: relative;
-    top: 220px;
-    right: 10px;
-    display: flex;
+    order:1;
+    margin-bottom:55px;
   }
-  .lista-miniatur ul {
-    /* flex: 0 1 auto; */
-    list-style: none;
-    padding: 0px;
+  .HolyGrail-nav {
+    flex: 1;
   }
-  .HolyGrail-ads {
-    color: white;
-    position: absolute;
-    top: 1000px;
-    left: 10px;
-    display: flex;
-    flex-direction: column;
-    flex: 0 1 auto;
-    width: 200px;
-  }
-
-  .HolyGrail-ads p {
-    font-size: 1.4em;
-    text-align: left;
-  }
-
   .large-image {
-    position: relative;
-    top: -20px;
-    width: 90%;
-    border: 2px solid white;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+}
+.title-large-image{
+  font-size: 25px;
+  position: absolute;
+ left:35px; 
+ top:12px;
+}
+.HolyGrail-ads{
+  position:relative;
+  padding-bottom: 35px;
+}
+footer {
+  background-color: #38a3a5;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer p {
+  font-size: 10px;
+  text-align: center;
+  color: white;
+}
 
-  .title-large-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 20px;
-    left: 30px;
-    font-size: 2em;
-    text-align: center;
-    font-family: "Lobster", cursive;
-    color: white;
-  }
-  footer {
-    position: relative;
-    top: 440px;
-    background-color: #38a3a5;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+
+@media (min-width: 768px) {
+  .HollyGrail{
+    background-color: blanchedalmond;
   }
 }
+
+@media (min-width: 992px) {
+  .HollyGrail{
+    background-color: rgb(49, 207, 10);
+  }
+}
+@media (min-width: 1200px) {
+  .HollyGrail{
+    background-color: rgb(10, 89, 207);
+}
+}
+@media (min-width: 1400px) {
+  .HollyGrail{
+    background-color: rgb(233, 110, 62);
+}}
