--- a/style2.css
+++ b/style2.css
@@ -7,45 +7,57 @@ body {
 
   font-size: 10px;
   font-family: "Roboto", sans-serif;
-  
 }
-.HollyGrail {
-  background-color: rgb(59, 211, 160);
+.HollyGrail{
+  background-color: aquamarine;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  justify-content: space-evenly;
 }
 .HollyGrail-title{
-  padding-top: 20px;
-  width: 100%;
-}
-.logo {
-  background: #38a3a5;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 35px;
+ position: fixed;
+
+  background-color: rgb(33, 173, 162);
+  width:100%;
+   text-transform: uppercase;
   color: azure;
-  font-weight: 200;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 5px 5px rgb(73, 73, 73);
+  border-bottom-left-radius: 55px;
+  border-bottom-right-radius: 55px;
+}
+.logo-one-word { 
+  font-size: 40px;
+  font-weight: 100; position: relative;
+  left:660px;
 }
 .ornament-title {
-  font-weight: 900;
+  font-weight: 500;
 }
-.logo-icon {
-  width: 100px;
-  position: absolute;
-  top: 20px;
+.logo-icon{
+  width:85px;
+  height: auto;
 }
-/* lista ul*/
+.large-image-responsive{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:100%;
+  height: auto;
+}
+nav {
+ position: fixed;
+  top:30px;
+  left:120px;
+  padding: 10px;
+}
+
 .lista-miniatur {
-  /* flex: 0 1 auto; */
   list-style: none;
-  width: 100%;
   display: flex;
   justify-content: center;
-  justify-content: space-between;
+  
 }
 .tytuly-miniatury {
   display: block;
@@ -58,13 +70,14 @@ body {
 a {
   text-decoration: none;
 }
+
 .obraz-miniatury {
   display: block;
   width: 100%;
   height: 85px;
 }
 .element-listy {
-display: inline-block;
+  display: inline-block;
   border: 2px solid white;
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -75,39 +88,48 @@ display: inline-block;
   min-width: 120px;
   max-width: 120px;
 }
-.large-image{
-  width:100%;
-  margin-bottom: 10px;
-}
-
 .title-large-image {
+  
   position: absolute;
-  top: 150px;
-  left: 390px;
+  top: 280px;
+  left: 50px;
   font-size: 10em;
   text-align: center;
   font-family: "Lobster", cursive;
   color: white;
 }
-
-
-.HolyGrail-ads {
-  font-size: 12px;
+.HolyGrail-ads{
+  position: absolute;
+  top:440px;
+  left:50px;
+  font-size: 20px;
+  width:700px;
   color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
-
 footer {
+  z-index: 2;
   background-color: #38a3a5;
   width: 100%;
-  height: 100px;
+  height: 40px;
+
   display: flex;
   align-items: center;
   justify-content: center;
+  border-top-left-radius: 55px;
+  border-top-right-radius: 55px;
+  position: fixed;
+  bottom: 0px;
+
 }
+
 footer p {
   font-size: 12px;
   text-align: center;
   color: white;
+  padding: 10px;
 }
+
+@media (200px <= width <= 425px)    { 
+  
+}
+ 
