--- a/style2.css
+++ b/style2.css
@@ -209,5 +209,13 @@ footer p {
     width:75px;
     height: auto;
   }
+  .HolyGrail-ads{
+    position: absolute;
+    top:440px;
+    left:140px;
+    font-size: 16px;
+    width:150px;
+    color: white;
+  }
 }
  
