--- a/style2.css
+++ b/style2.css
@@ -215,7 +215,7 @@ footer p {
     left:0px;
     font-size: 14px;
     text-align: left;
-    width:300px;
+    width:auto;
     height: 400px;
     color: white;
     padding: 10px;
