--- a/style2.css
+++ b/style2.css
@@ -70,7 +70,7 @@ nav {
 
 }
 
-.tytuly-miniatury {
+.tytul-miniatury {
   display: block;
   margin: 0;
   padding: 4px 10px;
@@ -203,7 +203,7 @@ footer p {
 
   }
 
-  .tytuly-miniatury {
+  .tytul-miniatury {
     display: block;
     margin: 0;
     padding: 4px 10px;
@@ -291,7 +291,7 @@ footer p {
     padding: 40px;
   }
 
-  .tytuly-miniatury {
+  .tytul-miniatury {
     display: block;
     margin: 0;
     padding: 4px 10px;
